--- a/todo-api/.env
+++ b/todo-api/.env
@@ -2,3 +2,5 @@ MSSQL_SERVER=localhost
 MSSQL_USER=sa
 MSSQL_PASSWORD=sa
 MSSQL_DATABASE=AdventureWorksLT2022
+LOG_DIR=C:\Code\Demo\GolangDemo\todo-api\log
+LOG_RETENTION_DAYS=7
